--- a/ride/Vistas/Registro/Empezar.xaml
+++ b/ride/Vistas/Registro/Empezar.xaml
@@ -5,11 +5,11 @@
     <Grid BackgroundColor="#276EF1">
         <StackLayout>
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Label Text="ride"
+                <Label Text="Ride"
                    TextColor="White"
                    HorizontalOptions="Center"
                    FontSize="40" />
-                <Image Source="https://ibb.co/s1pCdMM" />
+                <Image Source="https://i.ibb.co/dKszdnr/logo.png"/>
                 <Label Text="Viaja con seguridad"
                    TextColor="White"
                    HorizontalOptions="Center"
@@ -26,7 +26,7 @@
                         FontAttributes="Bold"
                         CornerRadius="10"
                         Command="{Binding IrcrearcuentaCommand}"/>
-                <Image Source="https://ibb.co/2Wc8Chs"
+                <Image Source="https://i.ibb.co/9cyw1gV/flecha-correcta.png"
                        HeightRequest="30"
                        HorizontalOptions="End"
                        Margin="0,0,18,0" />
