Fix en completar registro

--- a/ride/Vistas/Registro/CompletarRegistro.xaml
+++ b/ride/Vistas/Registro/CompletarRegistro.xaml
@@ -1,87 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Uberapp.Vistas.Registro.CompletarReg"
-             Visual="Material">
-    <StackLayout BackgroundColor="White"
-                 Padding="15">
-        <Label Text="Confirma tu información"
-               TextColor="Black"
-               FontSize="Medium" />
-        <Grid ColumnDefinitions="*,*">
-            <Frame BackgroundColor="#EEEEEE"
-                   HasShadow="False"
-                   CornerRadius="10"
-                   Padding="5"
-                   Margin="0,0,10,0">
-                <Entry Placeholder="Ingresa tu nombre"
-                       BackgroundColor="#EEEEEE"
-                       Text="{Binding _gooogleuserRecibe.Name}"/>
-            </Frame>
-            <Frame BackgroundColor="#EEEEEE"
-                   HasShadow="False"
-                   CornerRadius="10"
-                   Padding="5"
-                   Grid.Column="1">
-                <Entry Placeholder="Ingresa tu apellido"
-                       BackgroundColor="#EEEEEE"
-                       Text="{Binding _gooogleuserRecibe.Apellido}"/>
-            </Frame>
-        </Grid>
-        <StackLayout Orientation="Horizontal"
-                     Margin="0,9,0,0">
-            <Frame BackgroundColor="#EEEEEE"
-                   CornerRadius="8"
-                   HasShadow="False">
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://i.ibb.co/ggFB6y6/ordenar-abajo.png"
-                           HeightRequest="9" />
-                </StackLayout>
-            </Frame>
-            <Frame HorizontalOptions="FillAndExpand"
-                   Padding="10,5"
-                   CornerRadius="8"
-                   HasShadow="False"
-                   BackgroundColor="#EEEEEE">
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="+51"
-                           TextColor="Black"
-                           FontSize="Medium"
-                           VerticalOptions="Center" />
-                    <Entry BackgroundColor="#EEEEEE"
-                           Placeholder="Numero de móvil"
-                           HorizontalOptions="FillAndExpand"
-                           Keyboard="Telephone"></Entry>
-                </StackLayout>
-            </Frame>
+             x:Class="ride.Vistas.Registro.CompletarRegistro">
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Confirma tu identidad"
+                TextColor="Black" 
+                FontSize="Medium" />
+            <Grid ColumnDefinitions="*,*">
+                <Frame BackgroundColor="#EEEEEE"
+                       HasShadow="False"
+                       CornerRadius="10"
+                       Padding="5">
+                    <Entry Placeholder="Ingresa tu nombre"
+                           BackgroundColor="#EEEEEE"
+                           />
+                </Frame>
+                <Frame BackgroundColor="#EEEEEE"
+                       HasShadow="False"
+                       CornerRadius="10"
+                       Padding="5">
+                    <Entry Placeholder="Ingresa tu apellido"
+                           BackgroundColor="#EEEEEE"
+                           />
+                </Frame>
+            </Grid>
         </StackLayout>
-        <StackLayout Orientation="Horizontal"
-                     VerticalOptions="EndAndExpand">
-            <Frame BackgroundColor="#EEEEEE"
-                   HasShadow="False"
-                   CornerRadius="35"
-                   VerticalOptions="Center">
-                <Image Source="https://i.ibb.co/k5gTQFK/flecha-izquierda-2.png"
-                       HeightRequest="30" />
-            </Frame>
-            <Frame HorizontalOptions="EndAndExpand"
-                   Margin="0,20"
-                   BackgroundColor="Black"
-                   CornerRadius="30"
-                   Padding="15">
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Siguiente"
-                            BackgroundColor="Transparent"
-                            TextColor="White"
-                            TextTransform="None"
-                            FontAttributes="Bold"
-                            VerticalOptions="Center"/>
-                    <Image Source="https://ibb.co/2Wc8Chs"
-                           HeightRequest="30"
-                           HorizontalOptions="End"
-                           Margin="0,0,10,0" />
-                </StackLayout>
-            </Frame>
-        </StackLayout>
-    </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
