--- a/ride/Vistas/Registro/CrearCuenta.xaml
+++ b/ride/Vistas/Registro/CrearCuenta.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ride.Vistas.Registro.CrearCuenta">
-    <ContentPage.Content>
+             x:Class="ride.Vistas.Registro.CrearCuenta"
+             NavigationPage.HasNavigationBar="False">
         <StackLayout
         Padding="20"
         Spacing="30">
@@ -29,5 +29,4 @@
                 </Frame.GestureRecognizers>
             </Frame>
         </StackLayout>
-    </ContentPage.Content>
 </ContentPage>
