--- a/ride/Vistas/Registro/DigitarCodigo.xaml
+++ b/ride/Vistas/Registro/DigitarCodigo.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ride.Vistas.Registro.DigitarCodigo"
              xmlns:material="clr-namespace:Plugin.MaterialDesignControls;assembly=Plugin.MaterialDesignControls">
-    <ContentPage.Content>
-        <StackLayout Padding="20"
+    <StackLayout Padding="20"
                  BackgroundColor="White"
                  Spacing="20">
             <Label Text="Ingresa el código de 4 digitos que se te envió al 940308023"
@@ -15,9 +14,10 @@
                                         Keyboard="Numeric"
                                         FontSize="20"
                                         BackgroundColor="#F6F6F6"
-                                        BorderColor="#F6F6F6" />
-            </Grid>
-            <Frame CornerRadius="30"
+                                        BorderColor="#F6F6F6"
+                                        Text="{Binding Txtcodigo}"/>
+        </Grid>
+        <Frame CornerRadius="30"
                HorizontalOptions="Start"
                Padding="20,8"
                HasShadow="False"
@@ -49,10 +49,12 @@
                            HeightRequest="30"
                            HorizontalOptions="End"
                            Margin="0,0,10,0" />
-                    </StackLayout>
-                </Frame>
-            </StackLayout>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding Validarcommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+            </Frame>
         </StackLayout>
-    </ContentPage.Content>
+    </StackLayout>
 </ContentPage>
     
