Ofertas de conductores

--- a/ride/Vistas/Navegacion/Esperarofertas.xaml
+++ b/ride/Vistas/Navegacion/Esperarofertas.xaml
@@ -91,5 +91,6 @@
                 </Grid>
             </Grid>
         </StackLayout>
+        <navegacion:Listchoferes IsVisible="{Binding VisibleOfertas} "/>
     </Grid>
 </ContentPage>
